[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/ui/loss_screen.gd" id="1"]

[node name="LossScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Center" type="CenterContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel/Center"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 16
alignment = 1

[node name="Title" type="Label" parent="Panel/Center/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Defeat"
horizontal_alignment = 1

[node name="StageLabel" type="Label" parent="Panel/Center/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Stage Reached: 0"
horizontal_alignment = 1

[node name="HighLabel" type="Label" parent="Panel/Center/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "High Score (Stage): 0"
horizontal_alignment = 1

[node name="Stats" type="Label" parent="Panel/Center/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = ""
horizontal_alignment = 1

[node name="ScoreboardHolder" type="VBoxContainer" parent="Panel/Center/VBox"]
custom_minimum_size = Vector2(800, 320)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="NewGameButton" type="Button" parent="Panel/Center/VBox"]
custom_minimum_size = Vector2(300, 56)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "New Game"

